--- a/templates/base.html
+++ b/templates/base.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>historia_clinica</title>
     <link rel="Stylesheet" href="/static/css/Style.css">
+    
 </head>
 <body>
     {% block body %}
     {% endblock %}
     
-    {% block contenido %}
-    {% endblock %}
+    {% include 'footer.html' %}
+   <script src="/static/scrip.js"></script>
 </body>
 </html>
