--- a/templates/encabezado.html
+++ b/templates/encabezado.html
@@ -1,9 +1,7 @@
-{% extends 'f_consulta.html' %}
 {% block encabezado %}
-<header id="cuerpo">
-    <button data-mod-target="#mod" id="usuario" class="btn" type="button" name="iniciar">Iniciar sesion</button>
-    <h1>CLINICA COLOMBIA<H1>
-<header>
+<div id="cuerpo">
+    <h1>CLINICA COLOMBIA<h1>
+<div>
 {% endblock %}
 
 
@@ -11,3 +9,4 @@
 
 
 
+ 
