--- a/templates/f_Remision.html
+++ b/templates/f_Remision.html
@@ -1,5 +1,5 @@
 
-<from action="/remision", method="POST"> 
+<from class="formularios" action="/remision", method="POST"> 
     <table>
         <h3>Remision<h3> 
         <tr>
