--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,4 +1,5 @@
-
+{% block footer %}
 <footer id="pie">
   clinica colombia<br>clinaca@example<br>telefono:3113104481<br>Carrera 3 # 18- 45. 341 1348  
 </footer>
+{% endblock %}
